--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,30 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.LiveScore" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Cấu hình màu sắc cho chế độ sáng -->
-        <item name="colorPrimary">@color/primary</item> <!-- Màu xanh cho thanh AppBar -->
-        <item name="colorPrimaryVariant">@color/primary_dark</item> <!-- Màu đậm cho AppBar khi mở rộng -->
-        <item name="colorOnPrimary">@android:color/white</item> <!-- Chữ màu trắng trên thanh AppBar -->
+<resources>
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <!-- Primary brand color -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryVariant">@color/primary_variant</item>
+        <item name="colorOnPrimary">@color/on_primary</item>
+
+        <!-- Secondary brand color -->
         <item name="colorSecondary">@color/secondary</item>
-        <item name="colorOnSecondary">@android:color/white</item>
+        <item name="colorSecondaryVariant">@color/secondary</item>
+        <item name="colorOnSecondary">@color/on_primary</item>
+
+        <!-- Status bar color -->
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+
+        <!-- Background colors -->
+        <item name="android:colorBackground">@color/background_light</item>
+        <item name="colorOnBackground">@color/on_background_light</item>
+        <item name="android:windowBackground">@color/background_light</item>
+
+        <!-- Surface colors -->
+        <item name="colorSurface">@color/surface_light</item>
+        <item name="colorOnSurface">@color/on_surface_light</item>
+        <item name="colorBackground">@color/background_light</item>
+        <!-- Text colors -->
+        <item name="android:textColorPrimary">@color/text_primary</item>
+        <item name="android:textColorSecondary">@color/text_secondary</item>
     </style>
 </resources>
